feat: migrate to function-style coding challenges
